[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ecoflow"
authors = [{name = "Anton Ptashnik", email = "iavtomator@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "bleak >=0.20.2",
]
requires-python = ">=3.5"

[project.optional-dependencies]
test = [
    "pytest >= 7.3.0",
    "pytest-asyncio >= 0.21.0"
]

[project.urls]
Home = "https://github.com/anton-ptashnik/ecoflow-api-py"
